# invoxa

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  security.py
backend/app/shared/: __init__.py
backend/tests/: test_health.py
